--- a/ESHIRT/docker-compose.yml
+++ b/ESHIRT/docker-compose.yml
@@ -25,6 +25,7 @@ services:
         volumes:
           - ./certs:/etc/ssl/certs
           - ./certs/private:/etc/ssl/certs/private
+          - ./client/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
           - backend
 
