--- a/ESHIRT/docker-compose.yml
+++ b/ESHIRT/docker-compose.yml
@@ -26,6 +26,7 @@ services:
           - ./certs:/etc/ssl/certs
           - ./certs/private:/etc/ssl/certs/private
           - ./client/nginx/default.conf:/etc/nginx/conf.d/default.conf
+          - ./client/build:/usr/share/nginx/html
         depends_on:
           - backend
 
