--- a/ESHIRT/client/package.json
+++ b/ESHIRT/client/package.json
@@ -43,7 +43,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
+    "start2": "HTTPS=true react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
